resolve the bug of scripts and assembly