@@ -1,13 +1,12 @@
 @echo off
-setlocal enabledelayedexpansion //设置延迟环境变量扩充
-set JAVA=%JAVA_HOME%\bin\java //java命令
-set OPTS=-Xms512M -Xmx512M -Xss128k -XX:+AggressiveOpts -XX:+UseParallelGC -XX:NewSize=64M //jvm参数
+setlocal enabledelayedexpansion
+set JAVA=%JAVA_HOME%\bin\java
+set OPTS=-Xms512M -Xmx512M
 set LIBPATH=..\lib
 set CONFIG=..\conf
 set CP=%CONFIG%;
 set MAIN=com.fs.ie.mdgw.Main
 
-//循环加载jar包
 for /f %%i in ('dir /b %LIBPATH%\*.jar^|sort') do (
 set CP=!CP!%LIBPATH%\%%i;
 )
@@ -27,4 +26,4 @@ echo.
 echo ===============================================================================
 echo.
 
-%JAVA% %OPTS% -cp %CP% %MAIN% //运行
+java %OPTS% -cp %CP% %MAIN%
