@@ -1,6 +1,6 @@
 export MDGW_HOME="/opt/fsie_mdgw/"
 export JAVA=$JAVA_HOME/bin/java
-export JAVA_OPTS=-Xms512M -Xmx512M -Xss128k -XX:+AggressiveOpts -XX:+UseParallelGC -XX:NewSize=64M
+export JAVA_OPTS=-Xms512M -Xmx512M
 export LIBPATH=../lib
 export CONFIG = ../conf
 export CP=$CONFIG:
@@ -24,4 +24,4 @@ echo.
 echo ===============================================================================
 echo.
 
-$JAVA $JAVA_OPTS -cp “$CP” com.fs.ie.mdgw.Main
+$JAVA $JAVA_OPTS -cp $CP com.fs.ie.mdgw.Main
